# owncloud_mount

./: .anjuta_sym_db.db  .gitignore  Makefile  Makefile.am  Makefile.in  README  README.md  compile.sh  config.status  configure  configure.ac  davfs2.conf  install.sh  libtool  main.js  owncloud_mount.glade  owncloud_mount.vala  secretfileact.vala  temp
src/: Makefile  Makefile.am  Makefile.in  helper.vala  mounting.vala  owncloud_mount  owncloud_mount.ui  owncloud_mount.vala  secretfileact.vala
src/.deps/: mounting.Po  owncloud_mount.Po  secretfileact.Po
